--- a/index.html
+++ b/index.html
@@ -21,7 +21,31 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="container" id="navigation">
+      <ul class="nav nav-pills">
+        <li role="presentation" class="active"><a href="#hero">Home</a></li>
+        <li role="presentation"><a href="#reviews">Reviews</a></li>
+        <li role="presentation"><a href="#">Messages</a></li>
+      </ul>
+    </div>
+
+    <!-- Hero start -->
+    <div id="hero">
+      <div id="hero-content">
+        <img class="img-responsive center-block hidden-xs" src="http://placehold.it/1500x1000?text=Greetings+From+Martha's+Vineyard" alt="Greetings From Martha's Vineyard">
+        <img class="img-responsive center-block visible-xs" src="http://placehold.it/750x500?text=Greetings+From+Martha's+Vineyard" alt="Greetings From Martha's Vineyard">
+        <!-- <h4>Scroll for more</h4>
+        <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span> -->
+      </div>
+    </div>
+    <!-- Hero end -->
+
+    <!-- Reviews start -->
+    <div id="reviews">
+      <h1>Reviews</h1>
+      <br><br><br><br><br><br><br><br><br><br><br><br><br>
+    </div>
+    <!-- Reviews end -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
