Finished review skeleton

--- a/index.html
+++ b/index.html
@@ -42,8 +42,30 @@
 
     <!-- Reviews start -->
     <div id="reviews">
-      <h1>Reviews</h1>
-      <br><br><br><br><br><br><br><br><br><br><br><br><br>
+      <h1 class="text-center">Reviews</h1>
+      
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12 col-sm-4 col-sm-offset-2">
+            <blockquote>
+              <p>Craig truly is the best. Such a great guide and so easy going. Really the best! We were able to see the full island and great food along the way. Exactly what we were hoping for and then some. Absolutely PERFECT.</p>
+              <footer>Courtney F. <cite title="Source Title">Yelp</cite></footer>
+            </blockquote>
+          </div>
+          <div class="col-xs-12 col-sm-4">
+            <blockquote>
+              <p>Craig is an excellent tour guide, informative and fun! You feel like you really get a sense of the island as a place to live, not just to look at the beauty. He takes you into every nook and cranny. I was with my Mum, aunt and cousin in late April and despite some cool weather, he made us all warm. We were all friends by the end of the day.</p>
+              <footer>Rebecca R. <cite title="Source Title">Yelp</cite></footer>
+            </blockquote>
+          </div>
+          <!-- <div class="col-xs-12 col-sm-4">
+            <blockquote>
+              <p>Went on an island tour with Craig on the recommendation of our hotel concierge on Martha's Vineyard, and we are very glad we did ! This was our first time to the area and hoped to see as much as possible during our brief getaway. Not only did Craig show us the entire island, but he showed us a wonderful time ! We found him very informative, never boring and a lot of fun. He shared his knowledge with us and took us to the most amazing places. It was one of the highlights of our trip to the Vineyard. Highly recommend him.</p>
+              <footer>T. K. <cite title="Source Title">Yelp</cite></footer>
+            </blockquote> -->
+          </div>
+        </div>
+      </div>
     </div>
     <!-- Reviews end -->
 
@@ -51,5 +73,7 @@
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+
+    <script src="js/main.js"></script>
   </body>
 </html>
