Creating pro gallery lightbox but it isn't working

--- a/index.html
+++ b/index.html
@@ -105,13 +105,33 @@
     </div>
     <!-- Info Map end -->
 
+    <!-- Pro Gallery start -->
+    <div id="pro-gallery">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-xs-12 col-sm-6 background-image" id="edgartown-representer"></div>
+          <div class="hidden-xs col-sm-6 background-image" id="oakbluffs-representer"></div>
+        </div>
+
+        <div class="row">
+          <div class="hidden-xs col-sm-6 background-image" id="menemsha-representer"></div>
+          <div class="hidden-xs col-sm-6 background-image" id="aquinnah-representer"></div>
+        </div>
+      </div>
+
+      <button class="btn btn-large btn-viewgallery" onclick="openLightbox();">View Gallery</button>
+    </div>
+    <!-- Pro Gallery end -->
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
-
     <script src="bower_components/image-map-resizer/js/imageMapResizer.min.js"></script>
+
+    <script type="text/javascript" src="bower_components/slick-carousel/slick/slick.min.js"></script>
+    <script type="text/javascript" src="bower_components/slick-lightbox/dist/slick-lightbox.js"></script>
 
     <script src="js/main.js"></script>
   </body>
