Adding first (rough) draft of post-card-back-styled about and contact section.  Also adding transparent white background, linked telephone icon, and section links to navigation

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <li role="presentation" class="active"><a href="#hero">Home</a></li>
         <li role="presentation"><a href="#reviews">Reviews</a></li>
         <li role="presentation"><a href="#info-map">Map</a></li>
+        <li role="presentation"><a href="#pro-gallery">Gallery</a></li>
+        <li role="presentation"><a href="#about-contact">About</a></li>
+        <li role="presentation" class="pull-right"><a href="tel:6173599298" class="glyphicon glyphicon-earphone"></a></li>
       </ul>
     </div>
 
@@ -71,7 +74,7 @@
 
     <!-- Info Map start -->
     <div id="info-map">
-      <img id="map" src="images/marthas-vineyard-map-placeholder.jpg" usemap="#mapiconslocations" class="img-responsive" onclick="closePopups();">
+      <img id="map" src="images/info-map/marthas-vineyard-map-placeholder.jpg" usemap="#mapiconslocations" class="img-responsive" onclick="closePopups();">
 
       <map name="mapiconslocations">
         <area shape="circle" coords="520,136,30" alt="Oak Bluffs" onclick="showPopup('oak-bluffs');">
@@ -122,6 +125,18 @@
       <button class="btn btn-large btn-viewgallery" onclick="openLightbox();">View Gallery</button>
     </div>
     <!-- Pro Gallery end -->
+
+    <!-- About Contact start -->
+    <div id="about-contact">
+      <div class="col-xs-12 col-sm-6">
+        <p>Craig is a great guy and he gives tours of Martha's Vineyard.  They are very personal and customized.  Vesna is reading this, stop Vesna!  This is my text!  Don't you dare say this aloud or I will....</p>
+      </div>
+      <div class="col-xs-12 col-sm-6">
+        <h3>Telephone: <a href="tel:6173599298" >617-359-9298</a></h3>
+        <h4>Email: <a href="hello@toursmv.com">hello [at] toursmv.com</a></h4>
+      </div>
+    </div>
+    <!-- About Contact end -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
