Finishing project setup (GFMV-1) by setting up a gulp php server with file watching, bower dependency wiring, linting, and file minification.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"> -->
 
     <!-- Custom styles -->
-    <link href="styles/main.css" rel="stylesheet">
+    <link href="styles/main.min.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -138,16 +138,14 @@
     </div>
     <!-- About Contact end -->
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-
+    <!-- bower:js -->
+    <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/image-map-resizer/js/imageMapResizer.min.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="bower_components/slick-carousel/slick/slick.min.js"></script>
+    <script src="bower_components/slick-lightbox/dist/slick-lightbox.js"></script>
+    <!-- endbower -->
 
-    <script type="text/javascript" src="bower_components/slick-carousel/slick/slick.min.js"></script>
-    <script type="text/javascript" src="bower_components/slick-lightbox/dist/slick-lightbox.js"></script>
-
-    <script src="js/main.js"></script>
+    <script src="js/main.min.js"></script>
   </body>
 </html>
