Finishing GFMV-4 and working on GFMV-7.  This includes adding logos for Facebook and Yelp reviews, installing composer and ignoring the vendor directory, installing dependencies for gathering reviews and posts, modifying gulpfile to reload browser on composer changes (not working), and modifying styles, Javascript, and HTML to complete the tasks.

--- a/index.html
+++ b/index.html
@@ -45,22 +45,24 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-12 col-sm-4 col-sm-offset-2">
-            <blockquote>
-              <p>Craig truly is the best. Such a great guide and so easy going. Really the best! We were able to see the full island and great food along the way. Exactly what we were hoping for and then some. Absolutely PERFECT.</p>
-              <footer>Courtney F. <cite title="Source Title">Yelp</cite></footer>
-            </blockquote>
+            <img class="img-responsive center-block" src="/images/reviews/Yelp_trademark_RGB.png">
+            
+            <br>
+
+            <div id="yelp-reviews" class="reviews-slider"></div>
           </div>
           <div class="col-xs-12 col-sm-4">
-            <blockquote>
-              <p>Craig is an excellent tour guide, informative and fun! You feel like you really get a sense of the island as a place to live, not just to look at the beauty. He takes you into every nook and cranny. I was with my Mum, aunt and cousin in late April and despite some cool weather, he made us all warm. We were all friends by the end of the day.</p>
-              <footer>Rebecca R. <cite title="Source Title">Yelp</cite></footer>
-            </blockquote>
+            <img class="img-responsive center-block" src="/images/reviews/FB-f-Logo__blue_144.png">
+            
+            <br>
+
+            <div id="facebook-reviews" class="reviews-slider"></div>
           </div>
-          <!-- <div class="col-xs-12 col-sm-4">
-            <blockquote>
-              <p>Went on an island tour with Craig on the recommendation of our hotel concierge on Martha's Vineyard, and we are very glad we did ! This was our first time to the area and hoped to see as much as possible during our brief getaway. Not only did Craig show us the entire island, but he showed us a wonderful time ! We found him very informative, never boring and a lot of fun. He shared his knowledge with us and took us to the most amazing places. It was one of the highlights of our trip to the Vineyard. Highly recommend him.</p>
-              <footer>T. K. <cite title="Source Title">Yelp</cite></footer>
-            </blockquote> -->
+        </div>
+
+        <div class="row" id="reviews-loader">
+          <style type='text/css'>@-webkit-keyframes uil-default-anim { 0% { opacity: 1} 100% {opacity: 0} }@keyframes uil-default-anim { 0% { opacity: 1} 100% {opacity: 0} }.uil-default-css > div:nth-of-type(1){-webkit-animation: uil-default-anim 1s linear infinite;animation: uil-default-anim 1s linear infinite;-webkit-animation-delay: -1s;animation-delay: -1s;}.uil-default-css { position: relative;background:none;width:200px;height:200px;}.uil-default-css > div:nth-of-type(2){-webkit-animation: uil-default-anim 1s linear infinite;animation: uil-default-anim 1s linear infinite;-webkit-animation-delay: -0.9166666666666666s;animation-delay: -0.9166666666666666s;}.uil-default-css { position: relative;background:none;width:200px;height:200px;}.uil-default-css > div:nth-of-type(3){-webkit-animation: uil-default-anim 1s linear infinite;animation: uil-default-anim 1s linear infinite;-webkit-animation-delay: -0.8333333333333334s;animation-delay: -0.8333333333333334s;}.uil-default-css { position: relative;background:none;width:200px;height:200px;}.uil-default-css > div:nth-of-type(4){-webkit-animation: uil-default-anim 1s linear infinite;animation: uil-default-anim 1s linear infinite;-webkit-animation-delay: -0.75s;animation-delay: -0.75s;}.uil-default-css { position: relative;background:none;width:200px;height:200px;}.uil-default-css > div:nth-of-type(5){-webkit-animation: uil-default-anim 1s linear infinite;animation: uil-default-anim 1s linear infinite;-webkit-animation-delay: -0.6666666666666666s;animation-delay: -0.6666666666666666s;}.uil-default-css { position: relative;background:none;width:200px;height:200px;}.uil-default-css > div:nth-of-type(6){-webkit-animation: uil-default-anim 1s linear infinite;animation: uil-default-anim 1s linear infinite;-webkit-animation-delay: -0.5833333333333334s;animation-delay: -0.5833333333333334s;}.uil-default-css { position: relative;background:none;width:200px;height:200px;}.uil-default-css > div:nth-of-type(7){-webkit-animation: uil-default-anim 1s linear infinite;animation: uil-default-anim 1s linear infinite;-webkit-animation-delay: -0.5s;animation-delay: -0.5s;}.uil-default-css { position: relative;background:none;width:200px;height:200px;}.uil-default-css > div:nth-of-type(8){-webkit-animation: uil-default-anim 1s linear infinite;animation: uil-default-anim 1s linear infinite;-webkit-animation-delay: -0.4166666666666667s;animation-delay: -0.4166666666666667s;}.uil-default-css { position: relative;background:none;width:200px;height:200px;}.uil-default-css > div:nth-of-type(9){-webkit-animation: uil-default-anim 1s linear infinite;animation: uil-default-anim 1s linear infinite;-webkit-animation-delay: -0.3333333333333333s;animation-delay: -0.3333333333333333s;}.uil-default-css { position: relative;background:none;width:200px;height:200px;}.uil-default-css > div:nth-of-type(10){-webkit-animation: uil-default-anim 1s linear infinite;animation: uil-default-anim 1s linear infinite;-webkit-animation-delay: -0.25s;animation-delay: -0.25s;}.uil-default-css { position: relative;background:none;width:200px;height:200px;}.uil-default-css > div:nth-of-type(11){-webkit-animation: uil-default-anim 1s linear infinite;animation: uil-default-anim 1s linear infinite;-webkit-animation-delay: -0.16666666666666666s;animation-delay: -0.16666666666666666s;}.uil-default-css { position: relative;background:none;width:200px;height:200px;}.uil-default-css > div:nth-of-type(12){-webkit-animation: uil-default-anim 1s linear infinite;animation: uil-default-anim 1s linear infinite;-webkit-animation-delay: -0.08333333333333333s;animation-delay: -0.08333333333333333s;}.uil-default-css { position: relative;background:none;width:200px;height:200px;}</style><div class='uil-default-css' style='transform:scale(0.94);'><div style='top:80px;left:93px;width:14px;height:40px;background:#9e9e9e;-webkit-transform:rotate(0deg) translate(0,-60px);transform:rotate(0deg) translate(0,-60px);border-radius:10px;position:absolute;'></div><div style='top:80px;left:93px;width:14px;height:40px;background:#9e9e9e;-webkit-transform:rotate(30deg) translate(0,-60px);transform:rotate(30deg) translate(0,-60px);border-radius:10px;position:absolute;'></div><div style='top:80px;left:93px;width:14px;height:40px;background:#9e9e9e;-webkit-transform:rotate(60deg) translate(0,-60px);transform:rotate(60deg) translate(0,-60px);border-radius:10px;position:absolute;'></div><div style='top:80px;left:93px;width:14px;height:40px;background:#9e9e9e;-webkit-transform:rotate(90deg) translate(0,-60px);transform:rotate(90deg) translate(0,-60px);border-radius:10px;position:absolute;'></div><div style='top:80px;left:93px;width:14px;height:40px;background:#9e9e9e;-webkit-transform:rotate(120deg) translate(0,-60px);transform:rotate(120deg) translate(0,-60px);border-radius:10px;position:absolute;'></div><div style='top:80px;left:93px;width:14px;height:40px;background:#9e9e9e;-webkit-transform:rotate(150deg) translate(0,-60px);transform:rotate(150deg) translate(0,-60px);border-radius:10px;position:absolute;'></div><div style='top:80px;left:93px;width:14px;height:40px;background:#9e9e9e;-webkit-transform:rotate(180deg) translate(0,-60px);transform:rotate(180deg) translate(0,-60px);border-radius:10px;position:absolute;'></div><div style='top:80px;left:93px;width:14px;height:40px;background:#9e9e9e;-webkit-transform:rotate(210deg) translate(0,-60px);transform:rotate(210deg) translate(0,-60px);border-radius:10px;position:absolute;'></div><div style='top:80px;left:93px;width:14px;height:40px;background:#9e9e9e;-webkit-transform:rotate(240deg) translate(0,-60px);transform:rotate(240deg) translate(0,-60px);border-radius:10px;position:absolute;'></div><div style='top:80px;left:93px;width:14px;height:40px;background:#9e9e9e;-webkit-transform:rotate(270deg) translate(0,-60px);transform:rotate(270deg) translate(0,-60px);border-radius:10px;position:absolute;'></div><div style='top:80px;left:93px;width:14px;height:40px;background:#9e9e9e;-webkit-transform:rotate(300deg) translate(0,-60px);transform:rotate(300deg) translate(0,-60px);border-radius:10px;position:absolute;'></div><div style='top:80px;left:93px;width:14px;height:40px;background:#9e9e9e;-webkit-transform:rotate(330deg) translate(0,-60px);transform:rotate(330deg) translate(0,-60px);border-radius:10px;position:absolute;'></div></div>
+        </div>
           </div>
         </div>
       </div>
@@ -132,6 +134,12 @@
       </div>
     </div>
     <!-- About Contact end -->
+
+    <!-- Facebook Posts start -->
+    <div id="facebook-posts">
+      <h3>Latest Posts</h3>
+    </div>
+    <!-- Facebook Posts end -->
 
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
