--- a/index.html
+++ b/index.html
@@ -77,12 +77,14 @@
 
     <!-- Info Map start -->
     <div id="info-map">
-      <img id="map" src="images/info-map/marthas-vineyard-map-placeholder.jpg" usemap="#mapiconslocations" class="img-responsive" onclick="closePopups();">
+      <img id="map" src="images/map_sizes/map_3840.png" usemap="#mapiconslocations" class="img-responsive" onclick="closePopups();">
 
       <map name="mapiconslocations">
-        <area shape="circle" coords="520,136,30" alt="Oak Bluffs" onclick="showPopup('oak-bluffs');">
-        <area shape="circle" coords="590,275,30" alt="Edgartown" onclick="showPopup('edgartown');">
-        <area shape="circle" coords="205,332,30" alt="Aquinnah" onclick="showPopup('aquinnah');">
+        <area shape="circle" coords="2739,491,300" alt="Oak Bluffs" onclick="showPopup('oak-bluffs');">
+        <area shape="circle" coords="3075,1227,300" alt="Edgartown" onclick="showPopup('edgartown');">
+        <area shape="circle" coords="299,1771,300" alt="Aquinnah" onclick="showPopup('aquinnah');">
+        <area shape="circle" coords="2286,443,300" alt="Vineyard Haven" onclick="showPopup('vineyard-haven');">
+        <area shape="circle" coords="875,1571,300" alt="Menemsha" onclick="showPopup('menemsha');">
       </map>
 
       <div class="pop-up" id="oak-bluffs">
