Installing waypoints for navbar highlighting, compressing hero images, adding privacy policy, working on the Facebook API, and making the map id a class because of multiple sized images.

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 
     <!-- Info Map start -->
     <div id="info-map">
-      <img id="map" src="images/map_sizes/map_3840.png" usemap="#mapiconslocations" class="img-responsive" onclick="closePopups();">
+      <img src="images/map_sizes/map_3840.png" usemap="#mapiconslocations_3840" class="img-responsive map" onclick="closePopups();">
 
-      <map name="mapiconslocations">
+      <map name="mapiconslocations_3840">
         <area shape="circle" coords="2739,491,300" alt="Oak Bluffs" onclick="showPopup('oak-bluffs');">
         <area shape="circle" coords="3075,1227,300" alt="Edgartown" onclick="showPopup('edgartown');">
         <area shape="circle" coords="299,1771,300" alt="Aquinnah" onclick="showPopup('aquinnah');">
