--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <![endif]-->
   </head>
     <div class="container" id="navigation">
-      <ul class="nav nav-pills">
+      <ul class="nav nav-tabs">
+     
         <li role="presentation" class="active"><a href="#hero">Home</a></li>
         <li role="presentation"><a href="#reviews">Reviews</a></li>
         <li role="presentation"><a href="#info-map">Map</a></li>
@@ -77,9 +78,12 @@
 
     <!-- Info Map start -->
     <div id="info-map">
-      <img src="images/map_sizes/map_3840.png" usemap="#mapiconslocations_3840" class="img-responsive map" onclick="closePopups();">
+      <img src="images/map_sizes/map_3840.png" usemap="#mapiconslocations_3840" class="img-responsive map visible-xlg" onclick="closePopups();">
+      <img src="images/map_sizes/map_1920.png" usemap="#mapiconslocations_1920" class="img-responsive map visible-lg" onclick="closePopups();">
+      <img src="images/map_sizes/map_1200.png" usemap="#mapiconslocations_1200" class="img-responsive map visible-md" onclick="closePopups();">
+      <img src="images/map_sizes/map_992.png" usemap="#mapiconslocations_992" class="img-responsive map visible-sm" onclick="closePopups();">
 
-      <map name="mapiconslocations_3840">
+      <map name="mapiconslocations_3840">  
         <area shape="circle" coords="2739,491,300" alt="Oak Bluffs" onclick="showPopup('oak-bluffs');">
         <area shape="circle" coords="3075,1227,300" alt="Edgartown" onclick="showPopup('edgartown');">
         <area shape="circle" coords="299,1771,300" alt="Aquinnah" onclick="showPopup('aquinnah');">
@@ -87,12 +91,53 @@
         <area shape="circle" coords="875,1571,300" alt="Menemsha" onclick="showPopup('menemsha');">
       </map>
 
+      <map name="mapiconslocations_1920">  
+        <area shape="circle" coords="1364,249,200" alt="Oak Bluffs" onclick="showPopup('oak-bluffs');">
+        <area shape="circle" coords="1522,609,200" alt="Edgartown" onclick="showPopup('edgartown');">
+        <area shape="circle" coords="142,880,200" alt="Aquinnah" onclick="showPopup('aquinnah');">
+        <area shape="circle" coords="1135,229,200" alt="Vineyard Haven" onclick="showPopup('vineyard-haven');">
+        <area shape="circle" coords="430,784,200" alt="Menemsha" onclick="showPopup('menemsha');">
+      </map>
+      <map name="mapiconslocations_1200">  
+        <area shape="circle" coords="1364,249,200" alt="Oak Bluffs" onclick="showPopup('oak-bluffs');">
+        <area shape="circle" coords="1522,609,200" alt="Edgartown" onclick="showPopup('edgartown');">
+        <area shape="circle" coords="142,880,200" alt="Aquinnah" onclick="showPopup('aquinnah');">
+        <area shape="circle" coords="1135,229,200" alt="Vineyard Haven" onclick="showPopup('vineyard-haven');">
+        <area shape="circle" coords="430,784,200" alt="Menemsha" onclick="showPopup('menemsha');">
+      </map>
+      <map name="mapiconslocations_992">  
+        <area shape="circle" coords="1364,249,200" alt="Oak Bluffs" onclick="showPopup('oak-bluffs');">
+        <area shape="circle" coords="1522,609,200" alt="Edgartown" onclick="showPopup('edgartown');">
+        <area shape="circle" coords="142,880,200" alt="Aquinnah" onclick="showPopup('aquinnah');">
+        <area shape="circle" coords="1135,229,200" alt="Vineyard Haven" onclick="showPopup('vineyard-haven');">
+        <area shape="circle" coords="430,784,200" alt="Menemsha" onclick="showPopup('menemsha');">
+      </map>
+
       <div class="pop-up" id="oak-bluffs">
         <span class="glyphicon glyphicon-remove" onclick="closePopups();" aria-hidden="true"></span>
 
         <h1>Oak Bluffs</h1>
 
-        <p>Some shit some shit some shit some shit some shit some shit some shit some shit some shit some shit some shit some shit some shit some shit some shit some shit some shit some shit some shit some shit some</p>
+        <p>Before there was even a town named Oak Bluffs – back in the 1830s – Methodist congregations across New England would organize summer retreats to the outlying woods north of Edgartown, where they would spend a week in revival meetings, hearing as many as four sermons a day. Many found this setting so delightful, they started coming early on their camping trips and staying late. That early tradition of the “camp-meeting” really gave Martha’s Vineyard its start as a summer resort community.
+        As the Methodists expanded their summer visits, they first built wooden platforms for their tents, and then began building a community of colorful cottages around their open-air meeting center. Thus was born the Island’s only truly original architectural style, known today as Campground Gothic Revival. Some 300 cottages with “gingerbread” scrollwork details and gaily-colored paint schemes still stand at the heart of Oak Bluffs, around the central Tabernacle with its graceful arches of wrought iron. 
+        The historic path of this burgeoning summer resort so departed from Edgartown that in 1880 its residents split away, forming the town of Cottage City. The town took on the new name of Oak Bluffs in 1907.
+        From its revivalist beginnings, Oak Bluffs has grown to become the Island’s liveliest center for after-hours entertainment, with a downtown district, called Circuit Avenue, bustling well into the wee hours on summer weekends. Oak Bluffs is also home to such landmarks as the Flying Horses, among the nation’s oldest operating carousels, and Union Chapel, a remarkable octagonal structure that dates to 1870.
+        The Oak Bluffs harbor is known as the Island’s favorite center for power boaters, with its long concrete dock and electrical hookup services. Oak Bluffs is also home to the Island’s most impressive collection of public parks. The jewel of them all is Ocean Park, with a bandstand at the center from which concerts are given on alternating Sunday nights throughout the summer. Ocean Park is also the center for the August fireworks display which traditionally draws the biggest crowds of any single Island event, and which marks the conclusion of the high summer season. 
+ </p>
+      </div>
+      <div class="pop-up" id="vineyard-haven">
+        <span class="glyphicon glyphicon-remove" onclick="closePopups();" aria-hidden="true"></span>
+
+        <h1>Vineyard Haven</h1>
+
+        <p>Excellent shops, fine restaurants, and a beautiful harbor are only a few of the attractions that make Vineyard Haven so special to tourists and residents alike.The town that incorporates Vineyard Haven is called Tisbury, after a parish in England near the birthplace of the Island’s first governor, Thomas Mayhew. English settlement of the area dates from the mid-1600s, when Mayhew purchased the settlement rights from the Crown.Owen Park, off Main Street (just beyond the shopping district), honors one of Vineyard Haven’s whaling captains. The town beach here is a fine place to watch the harbor.When ships were powered by wind and canvas, Vineyard Haven was one of New England’s busiest ports because of its strategic location on the sailing routes. Most of the coastwise shipping traveled through Vineyard Sound (13,814 vessels were counted in 1845). Holmes Hole, as this harbor community was called, provided a convenient anchorage. Here a ship and its crew could lay over com­fortably to wait out bad weather, pick up provisions, or take on an experienced local pilot who could negotiate the rips and shoals that were the special perils of this sea route.In addition to Owen Park, the town main­tains War Veterans’ Memorial Park off Causeway Road (located just behind the fire station). The park includes playground equipment for young children and playing fields used by local ball teams.There are many scenic places around the town: in addition to Main Street and the harbor, the Tashmoo Lake overlook on State Road, the nearby Tisbury Water Works, West Chop Lighthouse, and the area around the drawbridge on Beach Road are favorite spots for photographers.</p>
+      </div>
+      <div class="pop-up" id="menemsha">
+        <span class="glyphicon glyphicon-remove" onclick="closePopups();" aria-hidden="true"></span>
+
+        <h1>Menemsha</h1>
+
+        <p>Menemsha is a small fishing village located in the town of Chilmark on the island of Martha's Vineyard in Dukes County, Massachusetts, United States.[1] It is located on the east coast of Menemsha Pond, adjacent to the opening into the Vineyard Sound on the pond's northern end. The village's historic harbor serves as the point of departure for local fishermen, some from multi-generational fishing families such as the Larsens, Pooles and Mayhews, as well as charter boats to the Elizabeth Islands and elsewhere. Besides charter fishing and cruises, other possibilities for recreation are the public beach adjacent to the harbor and the bicycle ferry across Menemsha Pond to Aquinnah as well as many excellent places to get freshly cooked seafood. It is also home of one of the most dramatic sunsets in New England. Menemsha is the location of a United States Coast Guard station, Coast Guard Station Menemsha, and was once known as Menemsha Creek. It is well known for being the background of Steven Spielberg's film Jaws.</p>
       </div>
 
       <div class="pop-up" id="edgartown">
@@ -100,7 +145,11 @@
 
         <h1>Edgartown</h1>
 
-        <p>Some shit some shit some shit some shit some shit some shit some shit some shit some shit some shit some shit some shit some shit some shit some shit some shit some shit some shit some shit some shit some</p>
+        <p>One of New England’s most elegant com­munities, Edgartown was the Island’s first colonial settlement and it has been the county seat since 1642.
+        The stately white Greek Revival houses built by the whaling captains have been carefully maintained. They make the town a museum-piece community, a seaport village preserved from the early 19th century.
+        Main Street is a picture-book setting with its harbor and waterfront. The tall square-rigged ships that sailed all the world’s oceans have passed from the Edgartown scene, but the heritage of those vessels and their captains has continued. For the past hundred years Edgartown has been one of the world’s great yachting centers.
+        To view and appreciate this town fully, you must walk its streets. North Water Street has a row of captains’ houses not equaled anywhere. Study the fanlights and widows walks by day and stroll down the streets after the lamps are lit.
+        Many houses in Edgartown predate the whaling era. Most are private residences, but three notable ones are serving other needs.There are excellent public beaches in the township of Edgartown. Norton’s Point, known as Katama, is a barrier beach providing surf bathing and the opportunity to explore Katama Bay on the other side of the dunes. Wasque and Cape Poge on Chappaquiddick are both unspoiled areas owned and maintained by The Trustees of Reservations. They are favorite spots for bluefish and bass fishermen. Lighthouse Beach, located off North Water Street near the town center, offers calm water and views of harbor activities.</p>
       </div>
 
       <div class="pop-up" id="aquinnah">
@@ -108,7 +157,7 @@
 
         <h1>Aquinnah</h1>
 
-        <p>Some shit some shit some shit some shit some shit some shit some shit some shit some shit some shit some shit some shit some shit some shit some shit some shit some shit some shit some shit some shit some</p>
+        <p>Many year-round residents of Aquinnah are descendants of the Wampanoag Indians who showed the colonial settlers how to kill whales, plant corn, and find clay for the early brickyards. The Aquinnah Wampanoaq were judged to be the most skillful and courageous boatsteerers of that era.he courage of the early residents of Aquinnah demonstrated itself in the many instances when they took to the seas in deadly weather to aid survivors of wrecks that took place off the Aquinnah Cliffs. As further testament to their valor, a plaque on the schoolhouse commemorates the fact that Aquinnah sent more men, in proportion to its size, to fight in World War I than did any other town in New England.The brilliant colors of the mile-long expanse of the Aquinnah Cliffs astonished early explorers and have continued to be a source of intense interest to scientists and visitors alike. Here layers of sands, gravels, and clays of various hues tell a hundred-million year-old story of a land first covered with forests, then flooded and laid bare, then covered with new growth, time and again. The seas, glaciers, and land itself have contorted these once-level layers into waving bands of color that stream above the sea. Erosion continues as it has for centuries, turning the seas red and revealing fossil secrets. From the fossils revealed by erosion we know of the great sharks that swam over what is now Chilmark, of the clams and crabs that inhabited ancient seas. Pieces of lignite from the Cretaceous period are found on the beach, looking like nothing so much as the remnants of recent campfires. Fossil bones of camels and wild horses, as well as those of ancient whales, have been found in the Cliffs. The Aquinnah Cliffs are a national landmark; yet they are seriously threatened by erosion. To protect the Cliffs, climbing and the removal of clay are both prohibited by law.Because of the extremely dangerous rocky ledge offshore, the seas around Aquinnah have always been a place of great peril to the mariner. One of the first revolving lighthouses in the country was erected atop the Cliffs in 1799. It had wooden works that became swollen in damp or cold weather, when the lighthouse keeper and his wife would be obliged to stand all night and turn the light by hand. The current red-brick, electrified Gay Head Light stands in its place.</p>
       </div>
     </div>
     <!-- Info Map end -->
