--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -17,7 +17,7 @@
     <![endif]-->
   </head>
 
-  <body>
+  <body id="privacy-policy">
     <div class="container">
       <br>
       <a class="pull-left" href="/"><span class="glyphicon glyphicon-menu-left"></span> Go back to site</a>
