--- a/public/index.html
+++ b/public/index.html
@@ -4,27 +4,25 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png?v=xQOpQNXb5R">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png?v=xQOpQNXb5R">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png?v=xQOpQNXb5R">
+    <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest?v=xQOpQNXb5R">
+    <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg?v=xQOpQNXb5R" color="#000000">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico?v=xQOpQNXb5R">
+    <meta name="msapplication-TileColor" content="#f7f6e2">
+    <meta name="theme-color" content="#f7f6e2">
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!--<link href="https://fonts.googleapis.com/css?family=Special+Elite|Ubuntu:300,400" rel="stylesheet">-->
+    
+    <meta name="google-site-verification" content="auSsGHIB_jSI3NTgTCqn-31N7dmsTUD73dglvdGdmrA" />
+
+    <!--<script src="https://www.google.com/recaptcha/api.js" async defer></script>-->
+    <title>Greetings From Martha's Vineyard</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
