Done implementing FareHarbor modal (GFMV-92).

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,8 @@
     
     <meta name="google-site-verification" content="auSsGHIB_jSI3NTgTCqn-31N7dmsTUD73dglvdGdmrA" />
 
+    <script src="https://fareharbor.com/embeds/api/v1/?autolightframe=yes"></script>
+
     <!--<script src="https://www.google.com/recaptcha/api.js" async defer></script>-->
     <title>Greetings From Martha's Vineyard</title>
   </head>
